force-app/Base/main/default/objects/Case/fields/Bug_Number__c.field-meta.xml
<CustomField>
	<fullName>Bug_Number__c</fullName>
	<description>Engineering bug number for this case.</description>
	<inlineHelpText>Enter the engineering bug number associated with this case.</inlineHelpText>
	<label>Bug Number</label>
	<length>20</length>
	<type>Text</type>
</CustomField>