force-app/Base/main/default/objects/Case/fields/Product_Category__c.field-meta.xml
<CustomField>
	<fullName>Product_Category__c</fullName>
	<description>Product category associated with the customer’s issue.</description>
	<inlineHelpText>Choose which product category is causing the customer’s issue.</inlineHelpText>
	<label>Product Category</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Accessories</fullName>
			</value>
			<value>
				<fullName>Desktops</fullName>
			</value>
			<value>
				<fullName>Laptops</fullName>
			</value>
			<value>
				<fullName>Networking Equipment</fullName>
			</value>
			<value>
				<fullName>Printers</fullName>
			</value>
			<value>
				<fullName>Servers</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>