force-app/Base/main/default/objects/Case/fields/Requirements__c.field-meta.xml
<CustomField>
	<fullName>Requirements__c</fullName>
	<description>Detailed requirements for the change request.</description>
	<inlineHelpText>Enter the detailed requirements for the AW Computing org change request.</inlineHelpText>
	<label>Requirements</label>
	<length>32768</length>
	<type>Html</type>
</CustomField>